# text-render-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
core/: Cargo.toml
core/src/: lib.rs  typesetting.rs
core/src/data/: font_data.rs  mod.rs  text_data.rs
core/src/open_type_like/: bbox.rs  command.rs  font.rs  glyph.rs  mod.rs  path.rs  transform.rs  word.rs
core/src/render/: render.rs
font/: Cargo.toml
font/src/: font2.rs  lib.rs  otf.rs  ttf.rs  woff.rs
server/: Cargo.toml
server/src/: draw.rs  lib.rs  main.rs  svg_util.rs
server/test/: data.json
skia/: Cargo.toml
skia/src/: bind.rs  lib.rs  t.json
wasm/: .babelrc  Cargo.toml  index.html  package.json  tsconfig.json  webpack.config.js
wasm/src/: chars.rs  lib.rs  shim.d.ts
wasm/src/js/: index.ts  t.js  test.ts  worker.ts
wasm/test/: index.js
