[package]
name = "core"
version = "0.1.0"
authors = ["suti <lxy96@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.11.15"
svgtypes = "0.5.0"
regex = "1.3.1"
serde_json = "1.0.51"
lazy_static = "1.4.0"
