[package]
name = "server"
version = "0.1.0"
authors = ["suti <lxy96@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {  version = "=0.1.0", path = "../core" }
font = {  version = "=0.1.0", path = "../font" }
uuid = { version = "0.8.1", features = ["v4"] }
tokio = { version = "~0.2", features = ["full"] }
hyper = "~0.13"
svg = "0.7.1"
base64 = "0.12.0"
bytes = "0.5.4"
imagesize = "0.8.1"
formdata = "0.12.3"
warp = "0.2.2"
notify = "4.0.15"
serde_json = "1.0.51"
