[package]
name = "skia"
version = "0.1.0"
authors = ["suti <lxy96@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

core = {  version = "=0.1.0", path = "../core" }
skia-safe = "0.17.0"
svgtypes = "0.5.0"