[package]
name = "wasm"
version = "0.1.0"
authors = ["suti <lxy96@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = {  version = "=0.1.0", path = "../core" }
js-sys = "0.3.33"
web-sys = { version = "0.3.33", features = ["Window", "Performance"] }
wasm-bindgen = "0.2.56"
wasm-bindgen-test = "0.3.6"
wasm-bindgen-futures = "0.4.6"
